@@ -1,2 +1,10 @@
 - Scala 2.12, sbt, ScalaTest, Play, Slick
 - Node.js 12.13.0, npm, Angular CLI, Angular 8, TypeScript 3.7, Bootsrtap, Jasmine
+
+Run configuration in dev mode:
+-Xms512M
+-Xmx1024M
+-Xss1M
+-XX:+CMSClassUnloadingEnabled
+-XX:MaxPermSize=256M
+-Dlogger.resource=logback-dev.xml
